# TriPQ

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  TriPQConfig.cmake.in  doxy.config.in
examples/: exampleSphericalTriangulation.cpp
include/TriPQ/: CGAL_Spherical_Polyhedron_Traits.h  RandomEdgeSelect.h  SelectNearestEdge3.h  StartFromFixedEdge.h  StartFromLastEdge.h  StartFromMostLocatedEdge.h  TriPQ.h
